initial import of franciscofrancos mako hotplug control + defconfig fix for lowest freq

--- a/arch/arm/configs/flo_defconfig
+++ b/arch/arm/configs/flo_defconfig
@@ -1,4 +1,4 @@
-#
+max#
 # Automatically generated file; DO NOT EDIT.
 # Linux/arm 3.4.0 Kernel Configuration
 #
@@ -448,7 +448,7 @@ CONFIG_MSM_IPC_ROUTER_SECURITY=y
 # CONFIG_MSM_DALRPC is not set
 CONFIG_MSM_CPU_FREQ_SET_MIN_MAX=y
 CONFIG_MSM_CPU_FREQ_MAX=1512000
-CONFIG_MSM_CPU_FREQ_MIN=384000
+CONFIG_MSM_CPU_FREQ_MIN=162000
 CONFIG_USERSPACE_VOLTAGE_CONTROL=y
 CONFIG_MSM_AVS_HW=y
 # CONFIG_MSM_HW3D is not set
