--- a/arch/arm/configs/flo_defconfig
+++ b/arch/arm/configs/flo_defconfig
@@ -449,9 +449,7 @@ CONFIG_MSM_IPC_ROUTER=y
 CONFIG_MSM_IPC_ROUTER_SMD_XPRT=y
 CONFIG_MSM_IPC_ROUTER_SECURITY=y
 # CONFIG_MSM_DALRPC is not set
-CONFIG_MSM_CPU_FREQ_SET_MIN_MAX=y
-CONFIG_MSM_CPU_FREQ_MAX=1512000
-CONFIG_MSM_CPU_FREQ_MIN=162000
+# CONFIG_MSM_CPU_FREQ_SET_MIN_MAX is not set 
 CONFIG_USERSPACE_VOLTAGE_CONTROL=y
 CONFIG_MSM_AVS_HW=y
 # CONFIG_MSM_HW3D is not set
