--- a/arch/arm/configs/flo_defconfig
+++ b/arch/arm/configs/flo_defconfig
@@ -1,4 +1,4 @@
-#
+
 # Automatically generated file; DO NOT EDIT.
 # Linux/arm 3.4.0 Kernel Configuration
 #
@@ -217,10 +217,13 @@ CONFIG_IOSCHED_NOOP=y
 CONFIG_IOSCHED_TEST=y
 CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_CFQ=y
+CONFIG_IOSCHED_FIOPS=y
+CONFIG_IOSCHED_ROW=y
 # CONFIG_DEFAULT_DEADLINE is not set
-CONFIG_DEFAULT_CFQ=y
+CONFIG_DEFAULT_FIOPS=y
 # CONFIG_DEFAULT_NOOP is not set
-CONFIG_DEFAULT_IOSCHED="cfq"
+# CONFIG_DEFAULT_ROW is not set
+CONFIG_DEFAULT_IOSCHED="fiops"
 # CONFIG_INLINE_SPIN_TRYLOCK is not set
 # CONFIG_INLINE_SPIN_TRYLOCK_BH is not set
 # CONFIG_INLINE_SPIN_LOCK is not set
@@ -446,9 +449,7 @@ CONFIG_MSM_IPC_ROUTER=y
 CONFIG_MSM_IPC_ROUTER_SMD_XPRT=y
 CONFIG_MSM_IPC_ROUTER_SECURITY=y
 # CONFIG_MSM_DALRPC is not set
-CONFIG_MSM_CPU_FREQ_SET_MIN_MAX=y
-CONFIG_MSM_CPU_FREQ_MAX=1512000
-CONFIG_MSM_CPU_FREQ_MIN=384000
+# CONFIG_MSM_CPU_FREQ_SET_MIN_MAX is not set 
 CONFIG_USERSPACE_VOLTAGE_CONTROL=y
 CONFIG_MSM_AVS_HW=y
 # CONFIG_MSM_HW3D is not set
@@ -711,17 +712,18 @@ CONFIG_CPU_FREQ_STAT=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
-CONFIG_CPU_FREQ_DEFAULT_GOV_SMARTMAX_M7=y
+# CONFIG_CPU_FREQ_DEFAULT_GOV_SMARTMAX is not set
+CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
+CONFIG_CPU_FREQ_GOV_SMARTMAX=y
 # CONFIG_CPU_FREQ_GOV_CONSERVATIVE is not set
-#CONFIG_CPU_FREQ_GOV_SMARTMAX_TEGRA is not set
-#CONFIG_CPU_FREQ_GOV_SMARTMAX_30 is not set
-#CONFIG_CPU_FREQ_GOV_SMARTMAX_ENRC2B is not set
+# CONFIG_CPU_FREQ_GOV_SMARTMAX_TEGRA is not set
+# CONFIG_CPU_FREQ_GOV_SMARTMAX_30 is not set
+# CONFIG_CPU_FREQ_GOV_SMARTMAX_ENRC2B is not set
 # CONFIG_CPU_FREQ_GOV_SMARTMAX_PRIMOU is not set
 CONFIG_CPU_FREQ_GOV_SMARTMAX_M7=y
 
