--- a/arch/arm/configs/flo_defconfig
+++ b/arch/arm/configs/flo_defconfig
@@ -541,6 +541,7 @@ CONFIG_MSM_HSIC_SYSMON=y
 # CONFIG_MSM_HSIC_SYSMON_TEST is not set
 CONFIG_MSM_CPU_PWRCTL=y
 CONFIG_FORCE_FAST_CHARGE=y
+CONFIG_INPUT_MEDIATOR=y
 
 #
 # System MMU
