cpufreq: interactive as default, ondmand and smartmax updated

--- a/arch/arm/configs/flo_defconfig
+++ b/arch/arm/configs/flo_defconfig
@@ -548,6 +548,19 @@ CONFIG_FORCE_FAST_CHARGE=y
 CONFIG_INPUT_MEDIATOR=y
 
 #
+# CPUQUIET Framework
+#
+CONFIG_CPUQUIET_FRAMEWORK=y
+# CONFIG_CPUQUIET_DEFAULT_GOV_BALANCED is not set
+# CONFIG_CPUQUIET_DEFAULT_GOV_RUNNABLE is not set
+# CONFIG_CPUQUIET_DEFAULT_GOV_RQ_STATS is not set
+CONFIG_CPUQUIET_DEFAULT_GOV_LOAD_STATS=y
+# CONFIG_CPUQUIET_GOVERNOR_BALANCED is not set
+CONFIG_CPUQUIET_GOVERNOR_RUNNABLE=y
+CONFIG_CPUQUIET_GOVERNOR_RQ_STATS=y
+CONFIG_CPUQUIET_GOVERNOR_LOAD_STATS=y
+
+#
 # System MMU
 #
 
@@ -717,8 +730,8 @@ CONFIG_CPU_FREQ_STAT=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
-CONFIG_CPU_FREQ_DEFAULT_GOV_SMARTMAX=y
-# CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_SMARTMAX is not set
+CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
